# PiperPoC

./: Cargo.toml  README.md  build.rs
.claude/: settings.local.json
man/: MANIFEST.json  MANIFEST.md  src_adapter_mod.rs.json  src_adapter_mod.rs.md  src_adapter_tts_adp.rs.json  src_adapter_tts_adp.rs.md  src_core_mod.rs.json  src_core_mod.rs.md  src_core_synth_core.rs.json  src_core_synth_core.rs.md  src_gateway_mod.rs.json  src_gateway_mod.rs.md  src_gateway_piper_ffi_gtw.rs.json  src_gateway_piper_ffi_gtw.rs.md  src_gateway_wav_gtw.rs.json  src_gateway_wav_gtw.rs.md  src_pal_audio_pal.rs.json  src_pal_audio_pal.rs.md  src_pal_desktop.rs.json  src_pal_desktop.rs.md  src_pal_mod.rs.json  src_pal_mod.rs.md  src_shared_defaults_x.rs.json  src_shared_defaults_x.rs.md  src_shared_mod.rs.json  src_shared_mod.rs.md  ui_globals_theme.slint.json  ui_globals_theme.slint.md  ui_main.slint.json  ui_main.slint.md  ui_tokens_durations.slint.json  ui_tokens_durations.slint.md  ui_tokens_sizes.slint.json  ui_tokens_sizes.slint.md
proj/: FIXES  ISSUES  PHASES  PROJECT  RULES  TODO  UIUX  rulestools.toml
src/: main.rs
src/adapter/: mod.rs  tts_adp.rs
src/app/: mod.rs
src/core/: mod.rs  synth_core.rs
src/gateway/: mod.rs  piper_ffi_gtw.rs  wav_gtw.rs
src/pal/: audio_pal.rs  desktop.rs  mod.rs
src/shared/: defaults_x.rs  mod.rs
src/ui/: mod.rs
tools/: build_libpiper.py
ui/: main.slint
ui/globals/: theme.slint
ui/tokens/: durations.slint  sizes.slint
